# llvm_builder

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
build_scripts/: build_shared.sh  build_standalone.sh  build_wheel_standalone.sh  compile.sh  docker_build.sh  docker_run.sh
cmake/: llvm_builderConfig.cmake.in
core/: CMakeLists.txt
core/include/core/ds/: fixed_string.h  fixed_vector.h
core/include/core/linker/: defines.h  interface.h  object.h  shared_lib.h  symbol.h
core/include/core/llvm/: analyze.h  control_flow.h  defines.h  function.h  jit.h  module.h  type.h  value.h
core/include/core/meta/: noncopyable.h
core/include/core/util/: callbacks.h  cstring.h  defines.h  dtype_util.h  error.h  object.h
core/src/apps/: dummy.x.cpp  dummy2.x.cpp
core/src/ds/: fixed_string.cpp
core/src/linker/: interface.cpp  object.cpp  shared_lib.cpp  symbol.cpp
core/src/llvm/: analyze.cpp  code_section.cpp  context_impl.cpp  context_impl.h  control_flow.cpp  function.cpp  function_builder.cpp  jit.cpp  jit_runtime_object.cpp  module.cpp  pch.h  type.cpp  value.cpp
core/src/meta/: basic_meta.h  make_derived.h  simple.h  underlying.h
core/src/unit_tests/: common_llvm_test.h  test_api_object.x.cpp  test_callbacks.x.cpp  test_fixed_string.x.cpp  test_fixed_vector.x.cpp  test_linker.x.cpp  test_llvm_codegen.x.cpp  test_llvm_jit_api.x.cpp  test_llvm_linear_algebra.x.cpp  test_llvm_object_model.x.cpp
core/src/util/: callbacks.cpp  cstring.cpp  debug.cpp  debug.h  dtype_util.cpp  error.cpp  logger.cpp  logger.h  string_util.cpp  string_util.h  sys_util.cpp  sys_util.h
doc/: language_ref.md  motivation.md  solution.md  tasks.org
docker/: Dockerfile
include/llvm_builder/: analyze.h  control_flow.h  defines.h  event.h  function.h  jit.h  module.h  type.h  value.h
include/llvm_builder/ds/: fixed_string.h
include/llvm_builder/meta/: noncopyable.h
include/llvm_builder/util/: error.h  object.h
python/: CMakeLists.txt  __init__.py  example.py  llvm_builder_py.cpp  llvm_builder_py.pyi
src/apps/: dummy.x.cpp  dummy2.x.cpp  raw_llvm.x.cpp  raw_llvm2.x.cpp
src/ds/: fixed_string.cpp  fixed_string.h
src/llvm/: analyze.cpp  code_section.cpp  context_impl.cpp  context_impl.h  control_flow.cpp  event.cpp  ext_include.h  function.cpp  function_builder.cpp  jit.cpp  jit_runtime_object.cpp  module.cpp  pch.h  type.cpp  value.cpp
src/meta/: basic_meta.h  simple.h
src/unit_tests/: common_llvm_test.h  test_api_object.x.cpp  test_fixed_string.x.cpp  test_llvm_codegen.x.cpp  test_llvm_jit_api.x.cpp  test_llvm_linear_algebra.x.cpp  test_llvm_object_model.x.cpp  test_llvm_symbol_semantics.x.cpp
src/util/: cstring.cpp  cstring.h  debug.cpp  debug.h  error.cpp  object.cpp  string_util.cpp  string_util.h
